# UrbanToyGraph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
demo/: graph_constructor.py
demo/template_graph/: block.graphml  concentric_large.graphml  concentric_small.graphml  concentric_straight.graphml  cross.graphml  fractal_cross.graphml  fractaler_cross.graphml  fractalerer_cross.graphml  manhattan.graphml  multiple_block.graphml  star.graphml  varying_density_grid.graphml
func/: create_graph.py
scripts/: create_graph.py  graph_constructor.py
template_graph/: barcelona.graphml  block.graphml  bridge_large.graphml  bridge_small.graphml  concentric_large.graphml  concentric_small.graphml  concentric_straight.graphml  cross.graphml  fractal_cross.graphml  fractaler_cross.graphml  fractalerer_cross.graphml  manhattan.graphml  multiple_block.graphml  star.graphml
tests/: test_utg.py
utg/: __init__.py  create_graph.py  utils.py
utg/tests/: test_create_graph.py  test_utils.py
